--- a/testpage.css
+++ b/testpage.css
@@ -1,2 +1,2 @@
-body {margin:0 0; font-famy: Arial, Helvetica, sans-serif;
+body {margin:0 0; border: 1px solid black;font-famy: Arial, Helvetica, sans-serif;
     font-size:100%; width: 500px}
